package com.mycompany.progetto_ing_soft.exceptions;

public class InvalidInputException extends Exception{

    public InvalidInputException() {
    }

    public InvalidInputException(String msg) {
        super(msg);
    }
}
