package com.mycompany.progetto_ing_soft.exceptions;

public class OneElementStackException extends Exception{

    public OneElementStackException() {
    }

    public OneElementStackException(String msg) {
        super(msg);
    }
}
